--- a/index_pose.html
+++ b/index_pose.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Campo in prospettiva + MATCHDAY + Foto sopra badge</title>
+  <title>Matchday - Petriolese Calcio</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <style>
   :root{
     --pitch-bottom: 14%;           /* distanza del trapezio dal fondo */
