--- a/index_pose.html
+++ b/index_pose.html
@@ -7,22 +7,21 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <style>
   :root{
-    --pitch-bottom: 14%;           /* distanza del trapezio dal fondo */
-    --subs-gap:      8%;           /* spazio tra campo e zona subs */
+    --pitch-bottom: 14%;
+    --subs-gap:      8%;
     --bg:#0b0c11;
     --roof-dark:#151923;
     --roof-mid:#1f2531;
     --roof-glow:rgba(255,255,255,.08);
     --grass-1:#0a6f20; --grass-2:#0d7f26;
-    --rossoblu:linear-gradient(90deg,#8b0000,#000080);
 
-    /* === Manopole giocatori / badge (in cqh = % altezza campo) === */
-    --photo-h: 20cqh;              /* altezza foto titolari */
-    --badge-w: 16cqh;              /* larghezza badge giocatore */
+    /* === Giocatori (immutati) === */
+    --photo-h: 20cqh;
+    --badge-w: 16cqh;
     --badge-font: min(1.8cqh, 2.3cqw);
     --badge-overlap: 1.4cqh;
 
-    /* === Manopole SUBS (testo elenco) === */
+    /* === Testo elenco SUBS (immutati) === */
     --subs-font:  min(1.6cqh, 2.1cqw);
     --subs-weight: 800;
     --subs-tracking: .18cqw;
@@ -30,6 +29,25 @@
     --subs-transform: uppercase;
     --subs-maxw: calc(100% - 6cqw);
     --subs-font-family: system-ui, Arial, sans-serif;
+
+    /* ====== VARIABILI MODULABILI PER I DUE BADGE ====== */
+    /* rapporto reale pennellata ~ 5.5:1 (adegua se usi un file diverso) */
+    --brush-ar: 5.5;                 /* aspect ratio larghezza/altezza */
+
+    /* MATCHDAY */
+    --md-w: 26cqw;                   /* larghezza pennellata */
+    --md-font: min(1.8cqh, 2.3cqw);  /* grandezza font */
+    --md-x: 2cqw;                    /* offset sinistra */
+    --md-y: 2cqh;                    /* offset alto */
+
+    /* SUBS */
+    --sb-w: 30cqw;                   /* larghezza pennellata */
+    --sb-font: min(1.6cqh, 2.1cqw);  /* grandezza font */
+    --sb-x: 2cqw;                    /* offset sinistra */
+    --sb-gap-over: 0cqw;             /* ulteriore “sforamento” verso il campo (positivo = più dentro) */
+
+    /* Effetti */
+    --badge-shadow: 0 2px 10px rgba(0,0,0,.35);
   }
 
   html,body{height:100%}
@@ -48,7 +66,7 @@
     border-radius:18px;
     background:#0b0c11;
     box-shadow:0 25px 80px rgba(0,0,0,.6);
-    container-type:size;           /* abilita cqw + cqh */
+    container-type:size; /* abilita cqw + cqh */
   }
 
   .stadium{
@@ -74,7 +92,7 @@
   }
   svg{position:absolute; inset:0; width:100%; height:100%;}
 
-  /* Layer giocatori (stessa cornice del campo, NO clip) */
+  /* Layer giocatori (no clip) */
   .players{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -82,96 +100,71 @@
     container-type:size;
   }
 
-  .player{
-    position:absolute;
-    left:0; top:0;
-    transform:translate(-50%, -100%);
-    display:block;
-    overflow:visible;
-  }
-
-  .player .photo{
-    height: var(--photo-h);
-    width: auto;
-    position: relative;
-    display: block;
-    z-index: 1;
-  }
-
-  /* badge sovrapposto: non aumenta l’ingombro verticale */
+  .player{ position:absolute; left:0; top:0; transform:translate(-50%, -100%); }
+  .player .photo{ height: var(--photo-h); width:auto; position:relative; display:block; z-index:1; }
   .badge{
-    position: absolute;
-    left: 50%;
+    position:absolute; left:50%;
     top: calc(100% - var(--badge-overlap));
     transform: translateX(-50%);
-    display: flex; align-items: center; justify-content: center;
+    display:flex; align-items:center; justify-content:center;
     width: var(--badge-w);
     aspect-ratio: 5.5/1;
     font-size: var(--badge-font);
     font-weight: 900;
-    background: url('badge.png?v=6') center/100% auto no-repeat; /* badge dei giocatori (resta invariato) */
-    color:#000; white-space: nowrap; line-height: 1;
-    pointer-events: none;
-    z-index: 2;
+    background: url('badge.png?v=6') center/100% auto no-repeat; /* badge giocatore */
+    color:#000; white-space:nowrap; line-height:1;
+    pointer-events:none; z-index:2;
   }
 
-  /* ====== BADGE GLOBALI CON PENNELLATA WEBP ====== */
-
-  /* MATCHDAY in alto a sinistra */
-  .matchday-badge{
-    position:absolute;
-    top:2cqh; left:2cqw;
-    width: 26cqw;                /* scala con la larghezza del container */
-    aspect-ratio: 5.5/1;
-    display:flex; align-items:center; justify-content:center;
-    background: url('badge-bg.webp') center / cover no-repeat; /* pennellata rossa/blu */
-    color:#fff; font-weight:900;
-    font-size: min(1.8cqh, 2.3cqw);
-    letter-spacing:.2cqw;
-    text-transform: uppercase;
-    padding: 0 .8cqw;            /* un filo di respiro laterale */
-    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
-  }
-
-  /* SUBS centrato a cavallo della linea di fondo campo */
+  /* ====== BADGE GLOBALI CON PENNELLATA WEBP (completa) ====== */
+  /* Nota: background-size: contain per mostrare TUTTO il PNG */
+  .matchday-badge,
   .subs-badge{
     position:absolute;
-    bottom: var(--pitch-bottom);
-    left: 50%;
-    transform: translate(-50%, 50%);
-    width: 30cqw;                /* leggermente più largo del matchday */
-    aspect-ratio: 5.5/1;
     display:flex; align-items:center; justify-content:center;
-    background: url('badge-bg.webp') center / cover no-repeat;
-    color:#fff; font-weight:900;
-    font-size: min(1.6cqh, 2.1cqw);
-    letter-spacing:.18cqw;
+    background: url('badge-bg.webp') center / contain no-repeat;
+    filter: drop-shadow(var(--badge-shadow));
     text-transform: uppercase;
+    letter-spacing:.18cqw;
+    white-space:nowrap;
+  }
+
+  /* MATCHDAY: alto-sinistra */
+  .matchday-badge{
+    left: var(--md-x); top: var(--md-y);
+    width: var(--md-w);
+    height: calc(var(--md-w) / var(--brush-ar));
+    font-weight: 900;
+    font-size: var(--md-font);
     padding: 0 .8cqw;
-    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
-    pointer-events:none;
-    z-index: 3;
+    color:#fff;
   }
 
-  /* Zona sotto al campo = tutto lo spazio dal fondo campo al fondo stage */
+  /* SUBS: sinistra, a cavallo tra campo e panchina */
+  .subs-badge{
+    left: calc(var(--sb-x) + var(--sb-gap-over));
+    bottom: var(--pitch-bottom);
+    transform: translateY(50%);   /* metà sopra il bordo del campo */
+    width: var(--sb-w);
+    height: calc(var(--sb-w) / var(--brush-ar));
+    font-weight: 900;
+    font-size: var(--sb-font);
+    padding: 0 .8cqw;
+    color:#fff;
+    z-index:3;
+    pointer-events:none;
+  }
+
+  /* Zona elenco panchina */
   .subs-zone{
-    position:absolute;
-    left:0; right:0; bottom:0;
+    position:absolute; left:0; right:0; bottom:0;
     height: var(--pitch-bottom);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding: 0 2cqw;
-    pointer-events:none;
+    display:flex; align-items:center; justify-content:center;
+    padding: 0 2cqw; pointer-events:none;
   }
-
   .subs-zone .subs-list{
-    position: static;
-    margin: 0 auto;
-    max-width: var(--subs-maxw);
-    text-align:center;
-    white-space: normal;
-    overflow-wrap:anywhere;
+    margin:0 auto; max-width: var(--subs-maxw);
+    text-align:center; white-space:normal; overflow-wrap:anywhere;
     font-family: var(--subs-font-family);
     font-size: var(--subs-font);
     font-weight: var(--subs-weight);
@@ -181,12 +174,13 @@
     color:#fff; opacity:.95;
   }
 
-  /* Pixel/telefoni: SUBS più grandi, meno tracking, riga più larga */
   @container (max-width: 520px){
     .stage{
       --subs-font: clamp(15px, 2.6cqh, 3.8cqw);
       --subs-tracking: .06cqw;
       --subs-maxw: calc(100% - 1cqw);
+      /* Se vuoi ingrandire i badge su telefoni piccoli: */
+      /* --md-w: 32cqw; --sb-w: 34cqw; */
     }
     .subs-zone{ padding: 0 1cqw; }
   }
@@ -196,7 +190,7 @@
   <div class="stage">
     <div class="stadium"></div>
 
-    <!-- MATCHDAY (pennellata) -->
+    <!-- MATCHDAY (pennellata completa) -->
     <div class="matchday-badge">MATCHDAY</div>
 
     <!-- Campo (clip) -->
@@ -210,7 +204,7 @@
     <!-- Layer giocatori (NO clip) -->
     <div class="players" id="players"></div>
 
-    <!-- SUBS (pennellata) -->
+    <!-- SUBS (pennellata completa, sinistra, a cavallo) -->
     <div class="subs-badge">SUBS</div>
 
     <!-- Elenco panchina -->
@@ -245,7 +239,7 @@ addCircle(cx,H-spot,R,Math.PI+base-eps,2*Math.PI-base+eps,260,3);
 
 /* ====== DATI ====== */
 const SHEET_FILE_ID = '1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
-const DIST_GID = '116187224';  // distinta
+const DIST_GID = '116187224';
 const PUBLISHED_DIST_URL =
   'https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml?gid=116187224&single=true';
 
@@ -253,17 +247,9 @@ const XI_NUMBERS   = [1,2,5,3,7,6,4,11,10,9,8];   // 3-4-1-2
 const BENCH_NUMBERS= [12,13,14,15,16,17,18,19,20];
 
 let coords3412 = [
-  [34,107], // GK
-  [54, 78], // RCB
-  [34, 82], // CB
-  [14, 78], // LCB
-  [62, 52], // RWB
-  [44, 57], // RCM
-  [24, 57], // LCM
-  [ 6, 52], // LWB
-  [34, 36], // CAM
-  [44, 13], // ST destro
-  [24, 13]  // ST sinistro
+  [34,107], [54,78], [34,82], [14,78],
+  [62,52], [44,57], [24,57], [6,52],
+  [34,36], [44,13], [24,13]
 ];
 
 /* helpers */
