--- a/index_pose.html
+++ b/index_pose.html
@@ -36,13 +36,13 @@
 
     /* MATCHDAY */
     --md-w: 60cqw;                   /* larghezza pennellata */
-    --md-font: min(2.2cqh, 2.8cqw);  /* grandezza font */
+    --md-font: 2.2cqh;  /* grandezza font */
     --md-x: 2cqw;                    /* offset sinistra */
     --md-y: 2cqh;                    /* offset alto */
 
     /* SUBS */
     --sb-w: 60cqw;                   /* larghezza pennellata */
-    --sb-font: min(2cqh, 2.2cqw);  /* grandezza font */
+    --sb-font: 2.2;  /* grandezza font */
     --sb-x: 2cqw;                    /* offset sinistra */
     --sb-gap-over: 0cqw;             /* ulteriore “sforamento” verso il campo (positivo = più dentro) */
 
