--- a/index_pose.html
+++ b/index_pose.html
@@ -7,22 +7,21 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <style>
   :root{
-    --pitch-bottom: 14%;           /* distanza del trapezio dal fondo */
-    --subs-gap:      8%;           /* spazio tra campo e zona subs */
+    --pitch-bottom: 14%;
+    --subs-gap:      8%;
     --bg:#0b0c11;
     --roof-dark:#151923;
     --roof-mid:#1f2531;
     --roof-glow:rgba(255,255,255,.08);
     --grass-1:#0a6f20; --grass-2:#0d7f26;
-    --rossoblu:linear-gradient(90deg,#8b0000,#000080);
 
-    /* === Manopole giocatori / badge (in cqh = % altezza campo) === */
-    --photo-h: 20cqh;              /* altezza foto titolari */
-    --badge-w: 16cqh;              /* larghezza badge giocatore */
+    /* === Manopole giocatori / badge giocatore === */
+    --photo-h: 20cqh;
+    --badge-w: 16cqh;
     --badge-font: min(1.8cqh, 2.3cqw);
     --badge-overlap: 1.4cqh;
 
-    /* === Manopole SUBS (testo elenco) === */
+    /* === Testo elenco SUBS === */
     --subs-font:  min(1.6cqh, 2.1cqw);
     --subs-weight: 800;
     --subs-tracking: .18cqw;
@@ -30,6 +29,19 @@
     --subs-transform: uppercase;
     --subs-maxw: calc(100% - 6cqw);
     --subs-font-family: system-ui, Arial, sans-serif;
+
+    /* ====== Pennellate badge globali ====== */
+    --brush-ar: 5.5;                 /* rapporto larghezza/altezza pennellata */
+
+    /* MATCHDAY controls */
+    --md-h: 4.8cqh;                  /* altezza badge */
+    --md-scale: 1.15;                /* larghezza pennellata (scala orizzontale) */
+    --md-font: min(1.8cqh, 2.3cqw);  /* dimensione testo */
+
+    /* SUBS controls */
+    --sb-h: 4.8cqh;
+    --sb-scale: 1.20;
+    --sb-font: min(1.6cqh, 2.1cqw);
   }
 
   html,body{height:100%}
@@ -98,7 +110,7 @@
     z-index: 1;
   }
 
-  /* badge sovrapposto: non aumenta l’ingombro verticale */
+  /* badge sovrapposto (giocatore) */
   .badge{
     position: absolute;
     left: 50%;
@@ -109,49 +121,50 @@
     aspect-ratio: 5.5/1;
     font-size: var(--badge-font);
     font-weight: 900;
-    background: url('badge.png?v=6') center/100% auto no-repeat; /* badge dei giocatori (resta invariato) */
+    background: url('badge.png?v=6') center/100% auto no-repeat;
     color:#000; white-space: nowrap; line-height: 1;
     pointer-events: none;
     z-index: 2;
   }
 
-  /* ====== BADGE GLOBALI CON PENNELLATA WEBP ====== */
+  /* ====== BADGE GLOBALI (pennellata ancorata a sinistra, senza drift) ====== */
+  .badge-plate{
+    position:absolute;
+    display:flex; align-items:center; justify-content:center;
+    height: var(--h);                               /* altezza modulabile */
+    width: calc(var(--h) * var(--brush-ar));        /* base dal rapporto */
+    font-weight:900; color:#fff; text-transform:uppercase;
+    font-size: var(--font); letter-spacing:.18cqw; white-space:nowrap;
+    padding: 0 .9cqw;
+    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
+  }
+  .badge-plate::before{
+    content:"";
+    position:absolute; inset:0;
+    background: url('badge-bg.webp') left center / contain no-repeat;
+    transform-origin: left center;                  /* ancora al bordo sinistro */
+    transform: scaleX(var(--scale));                /* allarga/accorcia la pennellata */
+    z-index:-1;
+  }
 
   /* MATCHDAY in alto a sinistra */
   .matchday-badge{
-    position:absolute;
-    top:2cqh; left:2cqw;
-    width: 26cqw;                /* scala con la larghezza del container */
-    aspect-ratio: 5.5/1;
-    display:flex; align-items:center; justify-content:center;
-    background: url('badge-bg.webp') center / cover no-repeat; /* pennellata rossa/blu */
-    color:#fff; font-weight:900;
-    font-size: min(1.8cqh, 2.3cqw);
-    letter-spacing:.2cqw;
-    text-transform: uppercase;
-    padding: 0 .8cqw;            /* un filo di respiro laterale */
-    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
+    --h: var(--md-h);
+    --scale: var(--md-scale);
+    --font: var(--md-font);
+    top: 2cqh; left: 2cqw;
   }
 
-/* SUBS a sinistra, a cavallo della linea di fondo campo */
-.subs-badge{
-  position:absolute;
-  bottom: var(--pitch-bottom);
-  left: 2cqw;                 /* <-- allineato a sinistra */
-  transform: translateY(50%); /* metà sopra la linea di fondo */
-  width: 30cqw;
-  aspect-ratio: 5.5/1;
-  display:flex; align-items:center; justify-content:center;
-  background: url('badge-bg.webp') left center / contain no-repeat; /* pennellata completa */
-  color:#fff; font-weight:900;
-  font-size: min(1.6cqh, 2.1cqw);
-  letter-spacing:.18cqw;
-  text-transform: uppercase;
-  padding: 0 .8cqw;
-  filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
-  pointer-events:none;
-  z-index: 3;
-}
+  /* SUBS a sinistra, a cavallo della linea di fondo */
+  .subs-badge{
+    --h: var(--sb-h);
+    --scale: var(--sb-scale);
+    --font: var(--sb-font);
+    left: 2cqw;
+    bottom: var(--pitch-bottom);
+    transform: translateY(50%);
+    z-index:3; pointer-events:none;
+  }
 
   /* Zona sotto al campo = tutto lo spazio dal fondo campo al fondo stage */
   .subs-zone{
@@ -187,6 +200,10 @@
       --subs-font: clamp(15px, 2.6cqh, 3.8cqw);
       --subs-tracking: .06cqw;
       --subs-maxw: calc(100% - 1cqw);
+      /* Esempio per ingrandire pennellate su display piccoli:
+      --md-h: 5.4cqh; --md-scale: 1.25;
+      --sb-h: 5.4cqh; --sb-scale: 1.28;
+      */
     }
     .subs-zone{ padding: 0 1cqw; }
   }
@@ -196,8 +213,8 @@
   <div class="stage">
     <div class="stadium"></div>
 
-    <!-- MATCHDAY (pennellata) -->
-    <div class="matchday-badge">MATCHDAY</div>
+    <!-- MATCHDAY (pennellata completa) -->
+    <div class="matchday-badge badge-plate">MATCHDAY</div>
 
     <!-- Campo (clip) -->
     <div class="pitch-wrap">
@@ -210,8 +227,8 @@
     <!-- Layer giocatori (NO clip) -->
     <div class="players" id="players"></div>
 
-    <!-- SUBS (pennellata) -->
-    <div class="subs-badge">SUBS</div>
+    <!-- SUBS (pennellata completa, sinistra, a cavallo) -->
+    <div class="subs-badge badge-plate">SUBS</div>
 
     <!-- Elenco panchina -->
     <div class="subs-zone">
