--- a/index_pose.html
+++ b/index_pose.html
@@ -7,21 +7,22 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <style>
   :root{
-    --pitch-bottom: 14%;
-    --subs-gap:      8%;
+    --pitch-bottom: 14%;           /* distanza del trapezio dal fondo */
+    --subs-gap:      8%;           /* spazio tra campo e zona subs */
     --bg:#0b0c11;
     --roof-dark:#151923;
     --roof-mid:#1f2531;
     --roof-glow:rgba(255,255,255,.08);
     --grass-1:#0a6f20; --grass-2:#0d7f26;
+    --rossoblu:linear-gradient(90deg,#8b0000,#000080);
 
-    /* === Manopole giocatori / badge giocatore === */
-    --photo-h: 20cqh;
-    --badge-w: 16cqh;
+    /* === Manopole giocatori / badge (in cqh = % altezza campo) === */
+    --photo-h: 20cqh;              /* altezza foto titolari */
+    --badge-w: 16cqh;              /* larghezza badge giocatore */
     --badge-font: min(1.8cqh, 2.3cqw);
     --badge-overlap: 1.4cqh;
 
-    /* === Elenco SUBS === */
+    /* === Manopole SUBS (testo elenco) === */
     --subs-font:  min(1.6cqh, 2.1cqw);
     --subs-weight: 800;
     --subs-tracking: .18cqw;
@@ -29,19 +30,6 @@
     --subs-transform: uppercase;
     --subs-maxw: calc(100% - 6cqw);
     --subs-font-family: system-ui, Arial, sans-serif;
-
-    /* === Pennellate globali === */
-    --brush-ar: 5.5;                 /* rapporto larghezza/altezza pennellata */
-
-    /* MATCHDAY */
-    --md-h: 4.8cqh;                  
-    --md-scale: 1.15;                
-    --md-font: min(1.8cqh, 2.3cqw);  
-
-    /* SUBS */
-    --sb-h: 4.8cqh;
-    --sb-scale: 1.20;
-    --sb-font: min(1.6cqh, 2.1cqw);
   }
 
   html,body{height:100%}
@@ -60,7 +48,7 @@
     border-radius:18px;
     background:#0b0c11;
     box-shadow:0 25px 80px rgba(0,0,0,.6);
-    container-type:size;           
+    container-type:size;           /* abilita cqw + cqh */
   }
 
   .stadium{
@@ -71,6 +59,7 @@
       linear-gradient(to bottom, var(--roof-mid) 0%, var(--roof-dark) 48%, #061007 100%);
   }
 
+  /* Campo in clip */
   .pitch-wrap{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -85,6 +74,7 @@
   }
   svg{position:absolute; inset:0; width:100%; height:100%;}
 
+  /* Layer giocatori (stessa cornice del campo, NO clip) */
   .players{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -108,6 +98,7 @@
     z-index: 1;
   }
 
+  /* badge sovrapposto: non aumenta l’ingombro verticale */
   .badge{
     position: absolute;
     left: 50%;
@@ -118,47 +109,51 @@
     aspect-ratio: 5.5/1;
     font-size: var(--badge-font);
     font-weight: 900;
-    background: url('badge.png?v=6') center/100% auto no-repeat;
+    background: url('badge.png?v=6') center/100% auto no-repeat; /* badge dei giocatori (resta invariato) */
     color:#000; white-space: nowrap; line-height: 1;
     pointer-events: none;
     z-index: 2;
   }
 
-  /* ====== BADGE GLOBALI (pennellata centrata, auto-fit) ====== */
-  .badge-plate{
+  /* ====== BADGE GLOBALI CON PENNELLATA WEBP ====== */
+
+  /* MATCHDAY in alto a sinistra */
+  .matchday-badge{
     position:absolute;
+    top:2cqh; left:2cqw;
+    width: 26cqw;                /* scala con la larghezza del container */
+    aspect-ratio: 5.5/1;
     display:flex; align-items:center; justify-content:center;
-    height: var(--h);
-    inline-size: var(--plate-w, calc(var(--h) * var(--brush-ar) * var(--scale)));
-    width:auto;
-    font-weight:900; color:#fff; text-transform:uppercase;
-    font-size: var(--font); letter-spacing:.18cqw; white-space:nowrap;
-    padding: 0 .9cqw;
+    background: url('badge-bg.webp') center / cover no-repeat; /* pennellata rossa/blu */
+    color:#fff; font-weight:900;
+    font-size: min(1.8cqh, 2.3cqw);
+    letter-spacing:.2cqw;
+    text-transform: uppercase;
+    padding: 0 .8cqw;            /* un filo di respiro laterale */
     filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
   }
-  .badge-plate::before{
-    content:"";
-    position:absolute; inset:0;
-    background: url('badge-bg.webp') center / contain no-repeat; 
-    z-index:-1;
-  }
 
-  .matchday-badge{
-    --h: var(--md-h);
-    --scale: var(--md-scale);
-    --font: var(--md-font);
-    top: 2cqh; left: 2cqw;
-  }
-
+  /* SUBS centrato a cavallo della linea di fondo campo */
   .subs-badge{
-    --h: var(--sb-h);
-    --scale: var(--sb-scale);
-    --font: var(--sb-font);
+    position:absolute;
     bottom: var(--pitch-bottom);
-    transform: translateY(50%);
-    z-index:3; pointer-events:none;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    width: 30cqw;                /* leggermente più largo del matchday */
+    aspect-ratio: 5.5/1;
+    display:flex; align-items:center; justify-content:center;
+    background: url('badge-bg.webp') center / cover no-repeat;
+    color:#fff; font-weight:900;
+    font-size: min(1.6cqh, 2.1cqw);
+    letter-spacing:.18cqw;
+    text-transform: uppercase;
+    padding: 0 .8cqw;
+    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
+    pointer-events:none;
+    z-index: 3;
   }
 
+  /* Zona sotto al campo = tutto lo spazio dal fondo campo al fondo stage */
   .subs-zone{
     position:absolute;
     left:0; right:0; bottom:0;
@@ -186,6 +181,7 @@
     color:#fff; opacity:.95;
   }
 
+  /* Pixel/telefoni: SUBS più grandi, meno tracking, riga più larga */
   @container (max-width: 520px){
     .stage{
       --subs-font: clamp(15px, 2.6cqh, 3.8cqw);
@@ -200,9 +196,10 @@
   <div class="stage">
     <div class="stadium"></div>
 
-    <!-- MATCHDAY -->
-    <div id="matchdayBadge" class="matchday-badge badge-plate">MATCHDAY</div>
+    <!-- MATCHDAY (pennellata) -->
+    <div class="matchday-badge">MATCHDAY</div>
 
+    <!-- Campo (clip) -->
     <div class="pitch-wrap">
       <div class="grass"></div>
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
@@ -210,11 +207,13 @@
       </svg>
     </div>
 
+    <!-- Layer giocatori (NO clip) -->
     <div class="players" id="players"></div>
 
-    <!-- SUBS -->
-    <div id="subsBadge" class="subs-badge badge-plate">SUBS</div>
+    <!-- SUBS (pennellata) -->
+    <div class="subs-badge">SUBS</div>
 
+    <!-- Elenco panchina -->
     <div class="subs-zone">
       <div class="subs-list" id="subsList"></div>
     </div>
@@ -227,22 +226,11 @@ const TL={x:120,y:130}, TR={x:880,y:130}, BL={x:0,y:1000}, BR={x:1000,y:1000};
 const lerp=(a,b,t)=>({x:a.x+(b.x-a.x)*t, y:a.y+(b.y-a.y)*t});
 function map(u,v){const t=v/H, L=lerp(TL,BL,t), Rr=lerp(TR,BR,t), s=u/W; return {x:L.x+(Rr.x-L.x)*s, y:L.y+(Rr.y-L.y)*s};}
 const G=document.getElementById('lines');
-function addPolyline(pts,w=3){
-  const el=document.createElementNS('http://www.w3.org/2000/svg','polyline');
-  el.setAttribute('points',pts.map(p=>`${p.x.toFixed(1)},${p.y.toFixed(1)}`).join(' '));
-  el.setAttribute('stroke','white'); el.setAttribute('fill','none');
-  el.setAttribute('stroke-width',w); el.setAttribute('stroke-linecap','round'); el.setAttribute('stroke-linejoin','round');
-  G.appendChild(el);
-}
+function addPolyline(pts,w=3){const el=document.createElementNS('http://www.w3.org/2000/svg','polyline'); el.setAttribute('points',pts.map(p=>`${p.x.toFixed(1)},${p.y.toFixed(1)}`).join(' ')); el.setAttribute('stroke','white'); el.setAttribute('fill','none'); el.setAttribute('stroke-width',w); el.setAttribute('stroke-linecap','round'); el.setAttribute('stroke-linejoin','round'); G.appendChild(el);}
 const addLine=(u1,v1,u2,v2,w=3)=>addPolyline([map(u1,v1),map(u2,v2)],w);
 function addRect(x1,y1,x2,y2,w=3){addLine(x1,y1,x2,y1,w); addLine(x1,y2,x2,y2,w); addLine(x1,y1,x1,y2,w); addLine(x2,y1,x2,y2,w);}
-function addCircle(cx,cy,r,from,to,steps=240,w=3){
-  const pts=[]; for(let i=0;i<=steps;i++){const a=from+(to-from)*i/steps; pts.push(map(cx+r*Math.cos(a),cy+r*Math.sin(a)));} addPolyline(pts,w);
-}
-function addDot(u,v,r=2.2){
-  const p=map(u,v); const c=document.createElementNS('http://www.w3.org/2000/svg','circle');
-  c.setAttribute('cx',p.x); c.setAttribute('cy',p.y); c.setAttribute('r',r); c.setAttribute('fill','white'); G.appendChild(c);
-}
+function addCircle(cx,cy,r,from,to,steps=240,w=3){const pts=[]; for(let i=0;i<=steps;i++){const a=from+(to-from)*i/steps; pts.push(map(cx+r*Math.cos(a),cy+r*Math.sin(a)));} addPolyline(pts,w);}
+function addDot(u,v,r=2.2){const p=map(u,v); const c=document.createElementNS('http://www.w3.org/2000/svg','circle'); c.setAttribute('cx',p.x); c.setAttribute('cy',p.y); c.setAttribute('r',r); c.setAttribute('fill','white'); G.appendChild(c);}
 addPolyline([TL,TR,BR,BL,TL],6);
 addLine(0,H/2,W,H/2,3);
 addCircle(W/2,H/2,R,0,2*Math.PI,280,3); addDot(W/2,H/2);
@@ -257,19 +245,28 @@ addCircle(cx,H-spot,R,Math.PI+base-eps,2*Math.PI-base+eps,260,3);
 
 /* ====== DATI ====== */
 const SHEET_FILE_ID = '1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
-const DIST_GID = '116187224';  
+const DIST_GID = '116187224';  // distinta
 const PUBLISHED_DIST_URL =
   'https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml?gid=116187224&single=true';
 
-const XI_NUMBERS   = [1,2,5,3,7,6,4,11,10,9,8];   
+const XI_NUMBERS   = [1,2,5,3,7,6,4,11,10,9,8];   // 3-4-1-2
 const BENCH_NUMBERS= [12,13,14,15,16,17,18,19,20];
 
 let coords3412 = [
-  [34,107],[54,78],[34,82],[14,78],[62,52],[44,57],[24,57],[6,52],
-  [34,36],[44,13],[24,13]
+  [34,107], // GK
+  [54, 78], // RCB
+  [34, 82], // CB
+  [14, 78], // LCB
+  [62, 52], // RWB
+  [44, 57], // RCM
+  [24, 57], // LCM
+  [ 6, 52], // LWB
+  [34, 36], // CAM
+  [44, 13], // ST destro
+  [24, 13]  // ST sinistro
 ];
 
-/* helpers CSV */
+/* helpers */
 const gvizCsvURL  = (fileId, gid) => `https://docs.google.com/spreadsheets/d/${fileId}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:csv`;
 function pubCsvURL(pubhtmlUrl){
   const u = new URL(pubhtmlUrl);
@@ -340,11 +337,14 @@ const SURNAME = full => {
   return p[p.length-1].toUpperCase();
 };
 
+/* ====== RENDER ====== */
 function pct(n){ return (n/1000*100).toFixed(3)+'%'; }
+
 function playerNode(obj, x, y){
   const div = document.createElement('div');
   div.className='player';
   div.style.left=pct(x); div.style.top=pct(y);
+
   const img = document.createElement('img');
   img.className='photo';
   img.alt = obj.name || '';
@@ -356,6 +356,46 @@ function playerNode(obj, x, y){
     img.onerror = () => img.remove();
   }
   div.appendChild(img);
+
   const badge = document.createElement('span');
   badge.className='badge';
-  badge.textContent = `${
+  badge.textContent = `${obj.num}.${SURNAME(obj.name)}`;
+  div.appendChild(badge);
+
+  return div;
+}
+
+function render(byNum){
+  const layer = document.getElementById('players');
+  layer.innerHTML = '';
+
+  XI_NUMBERS.forEach((n,i)=>{
+    const p = byNum.get(n) || {num:n, name:''};
+    const [ux,uy] = coords3412[i];
+    const world = map( ux, uy );
+    layer.appendChild( playerNode(p, world.x, world.y) );
+  });
+
+  const subs = BENCH_NUMBERS
+    .map(n => {
+      const p = byNum.get(n) || {num:n, name:''};
+      return `${p.num}.${SURNAME(p.name)}`;
+    })
+    .join('  ');
+  document.getElementById('subsList').textContent = subs;
+}
+
+/* ==== GO! ==== */
+(async function init(){
+  try{
+    const rows = await fetchDistRows();
+    const byNum = normalizeDist(rows);
+    render(byNum);
+  }catch(e){
+    console.error(e);
+    render(new Map()); // mostra solo numeri
+  }
+})();
+</script>
+</body>
+</html>
